tests/kiama/negative/type_errors/L4/7_badrecord7.ob
MODULE badrecord7;

VAR
    rec2 : RECORD h : INTEGER; r : RECORD i : INTEGER; j : BOOLEAN END END;
    
BEGIN
    rec2.h := rec2.r.k
END badrecord7.
